--- a/g5Mindr/g5Mindr/Cells/g5ReminderDetailSectionTableViewCell.xib
+++ b/g5Mindr/g5Mindr/Cells/g5ReminderDetailSectionTableViewCell.xib
@@ -9,48 +9,64 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="g5ReminderDetailSectionTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="g5ReminderDetailSectionTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oLp-RS-9n7">
+                        <rect key="frame" x="0.0" y="42.5" width="320" height="1"/>
+                        <color key="backgroundColor" red="0.36078431370000003" green="0.47843137250000001" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="phx-NP-Ace"/>
+                        </constraints>
+                    </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="fW0-7E-CAQ">
-                        <rect key="frame" x="276.5" y="8" width="27.5" height="27.5"/>
+                        <rect key="frame" x="284.5" y="8" width="27.5" height="27.5"/>
                         <constraints>
                             <constraint firstAttribute="width" secondItem="fW0-7E-CAQ" secondAttribute="height" id="Vgv-v8-eCx"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QmB-Yy-iQp">
-                        <rect key="frame" x="8" y="8" width="50.5" height="28"/>
+                        <rect key="frame" x="16" y="8" width="120" height="28"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="50.5" id="wmZ-D9-13r"/>
+                            <constraint firstAttribute="width" constant="120" id="wmZ-D9-13r"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" red="0.36078431370000003" green="0.47843137250000001" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ln5-xW-Elb">
-                        <rect key="frame" x="66" y="8" width="202" height="28"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ln5-xW-Elb">
+                        <rect key="frame" x="144" y="8" width="132" height="28"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
+                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 <constraints>
                     <constraint firstItem="Ln5-xW-Elb" firstAttribute="leading" secondItem="QmB-Yy-iQp" secondAttribute="trailing" constant="8" id="0ms-69-ldk"/>
+                    <constraint firstAttribute="bottom" secondItem="oLp-RS-9n7" secondAttribute="bottom" id="6CU-IC-e3m"/>
+                    <constraint firstAttribute="trailing" secondItem="oLp-RS-9n7" secondAttribute="trailing" id="8Pb-Jv-zug"/>
                     <constraint firstAttribute="bottomMargin" secondItem="QmB-Yy-iQp" secondAttribute="bottom" id="9gk-RO-KxX"/>
                     <constraint firstItem="fW0-7E-CAQ" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="CPx-Xe-LEo"/>
-                    <constraint firstItem="QmB-Yy-iQp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="DdV-rj-Sui"/>
+                    <constraint firstItem="QmB-Yy-iQp" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="DdV-rj-Sui"/>
                     <constraint firstAttribute="bottomMargin" secondItem="Ln5-xW-Elb" secondAttribute="bottom" id="EsJ-Qn-S6U"/>
                     <constraint firstItem="fW0-7E-CAQ" firstAttribute="leading" secondItem="Ln5-xW-Elb" secondAttribute="trailing" constant="8" id="IhU-LC-C9Y"/>
                     <constraint firstItem="QmB-Yy-iQp" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="JQe-dL-1FG"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="fW0-7E-CAQ" secondAttribute="trailing" constant="8" id="ahS-8c-EuY"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="fW0-7E-CAQ" secondAttribute="trailing" id="ahS-8c-EuY"/>
+                    <constraint firstItem="oLp-RS-9n7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="cIg-XK-Hx5"/>
                     <constraint firstItem="fW0-7E-CAQ" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="fZG-eA-LZ8"/>
                     <constraint firstItem="Ln5-xW-Elb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="zm0-Sd-lD8"/>
                 </constraints>
             </tableViewCellContentView>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <connections>
+                <outlet property="explanationLabel" destination="Ln5-xW-Elb" id="jo4-7f-xmD"/>
+                <outlet property="titleLabel" destination="QmB-Yy-iQp" id="fE9-ic-lhG"/>
+            </connections>
         </tableViewCell>
     </objects>
 </document>
