--- a/g5Mindr/g5Mindr/XIBs/g5ReminderViewController.xib
+++ b/g5Mindr/g5Mindr/XIBs/g5ReminderViewController.xib
@@ -13,6 +13,7 @@
                 <outlet property="innerRingImageView" destination="j5g-ur-l4w" id="jwY-bw-phB"/>
                 <outlet property="outerRingImageView" destination="hNd-kv-iJS" id="ewH-yx-3mI"/>
                 <outlet property="reminderDetailTableview" destination="Sqq-Ie-jHv" id="dSV-Sr-IDP"/>
+                <outlet property="tableViewHeightConstraint" destination="UrO-fc-c3n" id="Q3t-yS-74V"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -77,6 +78,13 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BtL-Ci-QyF" userLabel="View - Reminder Details">
                     <rect key="frame" x="0.0" y="64" width="600" height="160"/>
                     <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7uq-r1-4nk">
+                            <rect key="frame" x="0.0" y="159" width="600" height="1"/>
+                            <color key="backgroundColor" red="0.36078431370000003" green="0.47843137250000001" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="YH3-MN-kte"/>
+                            </constraints>
+                        </view>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hNd-kv-iJS" userLabel="Outer Ring">
                             <rect key="frame" x="270" y="20" width="60" height="60"/>
                             <constraints>
@@ -109,10 +117,13 @@
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="5I2-ZU-FR5" secondAttribute="bottom" constant="8" id="9Dr-lc-Qbv"/>
+                        <constraint firstAttribute="bottom" secondItem="7uq-r1-4nk" secondAttribute="bottom" id="AIY-My-fsg"/>
                         <constraint firstItem="j5g-ur-l4w" firstAttribute="centerY" secondItem="hNd-kv-iJS" secondAttribute="centerY" id="Brz-qu-dkE"/>
                         <constraint firstItem="5I2-ZU-FR5" firstAttribute="leading" secondItem="BtL-Ci-QyF" secondAttribute="leading" constant="18" id="Bsn-Zk-oLK"/>
+                        <constraint firstAttribute="trailing" secondItem="7uq-r1-4nk" secondAttribute="trailing" id="EtX-Ok-skb"/>
                         <constraint firstItem="5I2-ZU-FR5" firstAttribute="top" secondItem="hNd-kv-iJS" secondAttribute="bottom" constant="8" id="IK6-07-yma"/>
                         <constraint firstItem="hNd-kv-iJS" firstAttribute="centerX" secondItem="BtL-Ci-QyF" secondAttribute="centerX" id="Ni6-jJ-jUr"/>
+                        <constraint firstItem="7uq-r1-4nk" firstAttribute="leading" secondItem="BtL-Ci-QyF" secondAttribute="leading" id="TGW-9u-Zd1"/>
                         <constraint firstItem="j5g-ur-l4w" firstAttribute="centerX" secondItem="hNd-kv-iJS" secondAttribute="centerX" id="WKv-lc-tsi"/>
                         <constraint firstAttribute="trailing" secondItem="5I2-ZU-FR5" secondAttribute="trailing" constant="18" id="caF-Hz-F1p"/>
                         <constraint firstItem="hNd-kv-iJS" firstAttribute="top" secondItem="BtL-Ci-QyF" secondAttribute="top" constant="20" id="h77-Yf-nnD"/>
@@ -121,12 +132,16 @@
                         <constraint firstItem="U0h-X0-5jE" firstAttribute="centerX" secondItem="hNd-kv-iJS" secondAttribute="centerX" id="ydl-Se-4DD"/>
                     </constraints>
                 </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Sqq-Ie-jHv">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Sqq-Ie-jHv">
                     <rect key="frame" x="0.0" y="224" width="600" height="90"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="90" id="UrO-fc-c3n"/>
                     </constraints>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="ABi-AF-ung"/>
+                        <outlet property="delegate" destination="-1" id="BM4-en-5Ir"/>
+                    </connections>
                 </tableView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WeI-ja-v12" userLabel="View - Delete Button">
                     <rect key="frame" x="270" y="510" width="60" height="60"/>
