--- a/g5Mindr/g5Mindr/Cells/g5ReminderDetailButtonTableViewCell.xib
+++ b/g5Mindr/g5Mindr/Cells/g5ReminderDetailButtonTableViewCell.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="g5ReminderDetailButtonTableViewCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="g5ReminderDetailButtonTableViewCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -32,6 +32,9 @@
                     </view>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vb9-uH-2CN">
                         <rect key="frame" x="249" y="7" width="49" height="31"/>
+                        <connections>
+                            <action selector="didPressSwitchButton:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="A1E-Ws-Ejk"/>
+                        </connections>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="10k-sd-6Ia">
                         <rect key="frame" x="15" y="12" width="222" height="21"/>
@@ -61,6 +64,7 @@
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <connections>
+                <outlet property="onSwitch" destination="cnJ-Mj-foc" id="uha-Kb-Z3t"/>
                 <outlet property="titleLabel" destination="10k-sd-6Ia" id="RRy-b4-ubS"/>
             </connections>
         </tableViewCell>
