--- a/g5Mindr/g5Mindr/XIBs/g5ReminderViewController.xib
+++ b/g5Mindr/g5Mindr/XIBs/g5ReminderViewController.xib
@@ -10,6 +10,8 @@
                 <outlet property="deleteButton" destination="MFu-YE-cmz" id="U8c-68-1NE"/>
                 <outlet property="deleteButtonBackgroundView" destination="WeI-ja-v12" id="cYt-iU-21O"/>
                 <outlet property="emoticonImageView" destination="U0h-X0-5jE" id="Yp1-wS-LAb"/>
+                <outlet property="emoticonLabel" destination="Bg9-CY-hWp" id="uqr-Qg-Jaf"/>
+                <outlet property="explanationLabel" destination="5I2-ZU-FR5" id="Fks-Qk-8oQ"/>
                 <outlet property="innerRingImageView" destination="j5g-ur-l4w" id="jwY-bw-phB"/>
                 <outlet property="outerRingImageView" destination="hNd-kv-iJS" id="ewH-yx-3mI"/>
                 <outlet property="reminderDetailTableview" destination="Sqq-Ie-jHv" id="dSV-Sr-IDP"/>
@@ -86,31 +88,37 @@
                             </constraints>
                         </view>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hNd-kv-iJS" userLabel="Outer Ring">
-                            <rect key="frame" x="270" y="20" width="60" height="60"/>
+                            <rect key="frame" x="260" y="20" width="80" height="80"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="60" id="MQW-rh-Swg"/>
-                                <constraint firstAttribute="height" constant="60" id="hbL-O2-nec"/>
+                                <constraint firstAttribute="width" constant="80" id="MQW-rh-Swg"/>
+                                <constraint firstAttribute="height" constant="80" id="hbL-O2-nec"/>
                             </constraints>
                         </imageView>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="j5g-ur-l4w" userLabel="Inner Ring">
-                            <rect key="frame" x="275" y="25" width="50" height="50"/>
+                            <rect key="frame" x="267" y="27" width="66" height="66"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="50" id="HRF-eg-zPt"/>
-                                <constraint firstAttribute="height" constant="50" id="qZJ-6j-p4r"/>
+                                <constraint firstAttribute="width" constant="66" id="HRF-eg-zPt"/>
+                                <constraint firstAttribute="height" constant="66" id="qZJ-6j-p4r"/>
                             </constraints>
                         </imageView>
-                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="orange_hexagon.png" translatesAutoresizingMaskIntoConstraints="NO" id="U0h-X0-5jE" userLabel="Emoticon Image View">
-                            <rect key="frame" x="280" y="30" width="40" height="40"/>
+                        <imageView hidden="YES" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="orange_hexagon.png" translatesAutoresizingMaskIntoConstraints="NO" id="U0h-X0-5jE" userLabel="Emoticon Image View">
+                            <rect key="frame" x="275" y="35" width="50" height="50"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="40" id="UT9-qP-kc0"/>
-                                <constraint firstAttribute="width" constant="40" id="jcs-iv-i2P"/>
+                                <constraint firstAttribute="height" constant="50" id="UT9-qP-kc0"/>
+                                <constraint firstAttribute="width" constant="50" id="jcs-iv-i2P"/>
                             </constraints>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5I2-ZU-FR5" userLabel="Label - Explanation">
-                            <rect key="frame" x="18" y="88" width="564" height="64"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="O" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bg9-CY-hWp" userLabel="Label - Emoticon">
+                            <rect key="frame" x="275" y="35" width="50" height="50"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="50"/>
                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5I2-ZU-FR5" userLabel="Label - Explanation">
+                            <rect key="frame" x="18" y="108" width="564" height="44"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
@@ -127,9 +135,13 @@
                         <constraint firstItem="j5g-ur-l4w" firstAttribute="centerX" secondItem="hNd-kv-iJS" secondAttribute="centerX" id="WKv-lc-tsi"/>
                         <constraint firstAttribute="trailing" secondItem="5I2-ZU-FR5" secondAttribute="trailing" constant="18" id="caF-Hz-F1p"/>
                         <constraint firstItem="hNd-kv-iJS" firstAttribute="top" secondItem="BtL-Ci-QyF" secondAttribute="top" constant="20" id="h77-Yf-nnD"/>
+                        <constraint firstItem="Bg9-CY-hWp" firstAttribute="centerY" secondItem="U0h-X0-5jE" secondAttribute="centerY" id="hPf-E6-vMo"/>
+                        <constraint firstItem="Bg9-CY-hWp" firstAttribute="width" secondItem="U0h-X0-5jE" secondAttribute="width" id="j1m-J7-OIf"/>
+                        <constraint firstItem="Bg9-CY-hWp" firstAttribute="height" secondItem="U0h-X0-5jE" secondAttribute="height" id="oc8-2p-H5l"/>
                         <constraint firstAttribute="height" constant="160" id="pb8-a8-DOH"/>
                         <constraint firstItem="U0h-X0-5jE" firstAttribute="centerY" secondItem="hNd-kv-iJS" secondAttribute="centerY" id="wMQ-wp-RuR"/>
                         <constraint firstItem="U0h-X0-5jE" firstAttribute="centerX" secondItem="hNd-kv-iJS" secondAttribute="centerX" id="ydl-Se-4DD"/>
+                        <constraint firstItem="Bg9-CY-hWp" firstAttribute="centerX" secondItem="U0h-X0-5jE" secondAttribute="centerX" id="z6R-UE-wjf"/>
                     </constraints>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Sqq-Ie-jHv">
@@ -138,6 +150,7 @@
                     <constraints>
                         <constraint firstAttribute="height" constant="90" id="UrO-fc-c3n"/>
                     </constraints>
+                    <color key="sectionIndexBackgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="ABi-AF-ung"/>
                         <outlet property="delegate" destination="-1" id="BM4-en-5Ir"/>
